<resources>
    <string name="app_name">Диеты</string>
    <string name="check_your_connect">Check your internet</string>
    <string name="app_id" translatable="false">1709530</string>
    <string name="banner_id" translatable="false">R-M-1709530-2</string>
    <string name="native_id" translatable="false">R-M-1709530-3</string>
    <string name="inter_id" translatable="false">R-M-1709530-1</string>
    <string name="react_channel_id" translatable="false">com.weightloss.diets</string>
    <string name="water_channel_id" translatable="false">com.weightloss.diets.water</string>
    <string name="eat_channel_id" translatable="false">com.weightloss.diets.eat</string>
    <string name="url_gdpr" translatable="false">https://www.freeprivacypolicy.com/privacy/view/272200879b5cf29dd1b4fcd0f0299409</string>
    <string name="accompanying_text">Все работает в реальной жизни! Попробуй и ты!</string>
    <string name="release_user_expirior_id" translatable="false">efc7121f-434d-49e1-8ba2-b50d0d1b462c</string>
    <string name="tracker_share_1">Мной была успешно пройдена </string>
    <string name="tracker_share_2">. Результаты поражают! Попробуй и ты)</string>
    <string name="bnv_main">Диеты</string>
    <string name="bnv_prem">Премиум</string>
    <string name="bnv_settings">Профиль</string>
    <string-array name="images">
        <item>https://i.ibb.co/bF4N5d6/w0.jpg</item>
        <item>https://i.ibb.co/5x4RbWd/w1.jpg</item>
        <item>https://i.ibb.co/sKqH1hs/w2.jpg</item>
        <item>https://i.ibb.co/spS0Cqm/w3.jpg</item>
        <item>https://i.ibb.co/dQqVwL8/w4.jpg</item>
        <item>https://i.ibb.co/7nR5CqH/w5.jpg</item>
        <item>https://i.ibb.co/Y7q6dQN/w6.jpg</item>
        <item>https://i.ibb.co/2Fvh7nW/w7.jpg</item>
        <item>https://i.ibb.co/FxrSC1H/w8.jpg</item>
        <item>https://i.ibb.co/9G0hP98/w9.jpg</item>
        <item>https://i.ibb.co/CP9J1rr/w10.jpg</item>
        <item>https://i.ibb.co/H4b232Q/w11.jpg</item>
        <item>https://i.ibb.co/W54SCWD/w12.jpg</item>
        <item>https://i.ibb.co/sCYRV5H/w13.jpg</item>
        <item>https://i.ibb.co/yypthtq/w14.jpg</item>
        <item>https://i.ibb.co/4WC5HNG/w15.jpg</item>
        <item>https://i.ibb.co/xj0TxgC/w16.jpg</item>
        <item>https://i.ibb.co/5FR7Tx7/w17.jpg</item>
        <item>https://i.ibb.co/Rb2yZPD/w18.jpg</item>
        <item>https://i.ibb.co/3MRkywX/w19.jpg</item>
        <item>https://i.ibb.co/DpDtsHJ/w20.jpg</item>
        <item>https://i.ibb.co/QQdSwBF/w21.jpg</item>
        <item>https://i.ibb.co/PhLBfKz/w22.jpg</item>
        <item>https://i.ibb.co/brZzL9Y/w23.jpg</item>
        <item>https://i.ibb.co/YR8JTqZ/w24.jpg</item>
        <item>https://i.ibb.co/m9qzdMv/w25.jpg</item>
        <item>https://i.ibb.co/fxYFsqT/w26.jpg</item>
        <item>https://i.ibb.co/Z1bJrLx/w27.jpg</item>
    </string-array>
    <string-array name="titles_of_calculating_list">
        <item>Метод Поля Брока</item>
        <item>\"Мечта Лоренца\"</item>
        <item>Калькулятор ИМТ</item>
        <item>Калькулятор СПК</item>
    </string-array>
    <string-array name="descriptions_of_calculating_list">
        <item>Формула для определения идеального веса была разработана в 1871 году французским хирургом и антропологом Полем Брока.
            Формула подходит для людей выше 155 и ниже 185 сантиметров среднего телосложения.</item>
        <item>Существует изрядное количество формул для определения идеального веса.
            Алгоритмы расчётов отличаются сложностью и набором необходимых исходных данных.
            Способ Лоренца — один из самых известных и простейших.
            Чтобы его использовать, достаточно знать только рост.</item>
        <item>С помощью индекса массы тела вы можете проверить соответствие
            между массой вашего тела и вашим ростом и узнать,
            имеется ли у вас избыточный вес, или же, наоборот,
            не страдаете ли вы недостатком веса.</item>
        <item>С помощью калькулятора СПК можно определить ваш суточный лимит калорий, коридор калорий для похудения, оптимальное соотношение суточного потребления белков, жиров и углеводов (БЖУ)</item>
    </string-array>
    <string name="level_none">Минимальная активность</string>
    <string name="level_easy">Легкая активность</string>
    <string name="level_medium">Средняя активность</string>
    <string name="level_hard">Повышенная активность</string>
    <string name="level_up_hard">Высокая активность</string>
    <string name="level_super">Сверхвысокая активность</string>
    <string name="level_up_super">Предельная активность</string>
    <string name="spk_choise_your_gender">Выберите Ваш пол</string>
    <string name="spk_check_your_age">Проверьте Ваш возраст</string>
    <string name="spk_check_your_height">Проверьте введенный рост</string>
    <string name="spk_check_weight">Проверьте введенный вес</string>
    <string name="spk_kcal">ккал</string>
    <string name="description_of_SPK">Для комфортного похудения, для избежания срывов и нанесения вреда здоровью снижать калораж рациона ниже 1200 нельзя, поэтому в случае, если Ваш нижний предел оказался ниже 1200, надо необходимые калории сжигать за счёт физических нагрузок.</string>
    <string name="main_menu">Главное меню</string>
    <string name="together">Вместе с</string>
    <string name="description_brok">
        П. Брока включил в свои расчеты данные о возрастной категории, к которой относится исследуемый,
        а также сведения о длине его тела и конституционном типе сложения.</string>
    <string name="brok">Метод Поля Брока</string>
    <string name="tall">Ваш рост (см)</string>
    <string name="girth">Обхват запястья в сантиметрах</string>
    <string name="your_age">Ваш возраст</string>
    <string name="sex">Ваш пол</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="calculate_btn">Рассчитать</string>
    <string name="fill_all_fields">Для расчета заполните все поля</string>
    <string name="check_your_data">Проверьте введенные данные</string>
    <string name="unknown_error">Проверьте введенные данные</string>
    <string name="lorenc_method">Метод Лоренца</string>
    <string name="description_of_lorenc">Если ваш вес отличается несколькими килограммами от оптимального,
        определённого по формуле, но вы чувствуете себя комфортно, не стоит беспокоиться.</string>
    <string name="height_lorenc">Ваш рост в сантиметрах</string>
    <string name="lorenc_calculate">Рассчитать</string>
    <string name="recommended_weight">Ваш рекомендуемый вес</string>
    <string name="ok">Ok</string>
    <string name="imt">ИМТ</string>
    <string name="description_imt">Индекс массы тела следует применять с осторожностью, исключительно для ориентировочной оценки — например, попытка оценить с его помощью телосложение профессиональных спортсменов может дать неверный результат (высокое значение индекса в этом случае объясняется развитой мускулатурой)</string>
    <string name="your_weight_in_kilo">Ваш вес в килограммах</string>
    <string name="bnv_calc">Расчеты</string>
    <string name="eat_breakfast">Завтрак</string>
    <string name="eat_lunch">Обед</string>
    <string name="eat_snack_one">Перекус</string>
    <string name="hints">СОВЕТЫ</string>
    <string name="results">РЕЗУЛЬТАТЫ</string>
    <string name="reviews">ОТЗЫВЫ ДИЕТОЛОГОВ</string>
    <string-array name="body_types">
        <item>Выраженный дефицит массы тела</item>
        <item>Недостаточная масса тела</item>
        <item>Нормальный вес</item>
        <item>Избыточная масса тела (предожирение)</item>
        <item>Ожирение первой степени</item>
        <item>Ожирение второй степени</item>
        <item>Ожирение третьей степени</item>
    </string-array>
    <string-array name="descriptions_bodytypes">
        <item>Обладателии такого показателя ИМТ могут чувствовать себя на равных с такими известными моделями, как Кейт Мосс (ИМТ – 16,1), Наоми Кэмпбелл (ИМТ - 16,5), Гизелой Бундхен (ИМТ – 16), рискующими, кстати, остаться без работы в связи с борьбой с анорексией и, как следствие, с падением популярности представителей этой болезни среди знаменитостей. К слову, ИМТ ниже 17,5 – один из критериев в диагностике нервной анорексии, ИМТ около 15 – признак голодания.</item>
        <item>Хотя людям с таким показателем ИМТ практически не грозят болезни, возникающие вследствие ожирения, зато для них велика вероятность заработать другие проблемы. Такие как недостаточность мышечной массы, слабость костей, малокровие (анемия), невозможность организма усваивать некоторые питательные вещества, потеря волос, менструальные нарушения и трудности/невозможность зачатия.</item>
        <item>Представители «золотой середины», когда жировой ткани ни много, ни мало, а достаточно, конечно, находятся в преимуществе, по сравнению со всеми остальными. Такой вес не опасен для здоровья, его корректировки, возможно, понадобятся только с эстетической целью. </item>
        <item>Многие уверены, что слово "ожирение" к ним просто не может быть применимо - это особый и редкий случай. На самом деле, исходя из врачебной практики, диагноз этот имеют две женщины из 10-ти. Их индекс массы тела превышает цифру 30. А проблему под названием «избыточный вес» имеют еще большее количество женщин.</item>
        <item>Обладателям такого ИМТ необходимо снизить вес – даже небольшое снижение ИМТ позволит не только лучше выглядеть, но и лучше себя чувствовать. Ведь ожирение – это уже заболевание. И связано оно не только с высоким содержанием жира в организме, но и с риском возникновения других болезней, таких как сердечные заболевания, диабет II типа и гипертония. Чем больше обхват талии, тем выше риск.</item>
        <item>Риск заболеваний значительно повышается.</item>
        <item>Риск заболеваний слишком высок. Таким людям специалисты настоятельно рекомендуют снизить вес до более приемлемых размеров.</item>
    </string-array>
    <string-array name="eating_names">
        <item>Завтрак</item>
        <item>Обед</item>
        <item>Ужин</item>
        <item>Перекус</item>
        <item>Перекус</item>
    </string-array>
    <string-array name="loading_states">
        <item>загружаем диету</item>
        <item>выставляем дни</item>
        <item>загружаем меню</item>
        <item>запускаем трекер</item>
        <item>заканчиваем настройку</item>
    </string-array>
    <string name="ready">готово!</string>
    <string name="def_name">Введите ваше имя</string>
    <string name="tracker">Трекер</string>
    <string name="days_title">Дни недели</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="friday">Пятница</string>
    <string name="sunday">Воскресенье</string>
    <string name="thursday">Четверг</string>
    <string name="saturday">Суббота</string>
    <string name="days_cancel">отмена</string>
    <string name="days_save">сохранить</string>
    <string name="sleep_cancel">отмена</string>
    <string name="freq_title">Частота напоминаний</string>
    <string name="freq_30">Каждые 30 минут</string>
    <string name="freq_60">Каждый час</string>
    <string name="freq_90">Каждые 1.5 часа</string>
    <string name="freq_120">Каждые 2 часа</string>
    <string name="freq_150">Каждые 2.5 часа</string>
    <string name="freq_180">Каждые 3 часа</string>
    <string name="freq_cancel">отмена</string>
    <string name="freq_save">сохранить</string>
    <string name="exit_and_save">Сохранить и выйти?</string>
    <string name="exit_prop">Все данные будут сохранены без возможности редактирования</string>
    <string name="btn_save_and_exit">сохранить и выйти</string>
</resources>