<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_gravity="center"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                app:srcCompat="@drawable/ic_calendar_notification" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_title"
                android:textColor="#333333"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbMonday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"/>


                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbWednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"/>



                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbFriday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"/>

                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbSunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbTuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        android:textColor="@color/black"
                        android:fontFamily="@font/roboto"/>

                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbThursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"/>



                    <CheckBox
                        android:theme="@style/CBDays"
                        android:id="@+id/cbSaturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textColor="@color/black"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/roboto"/>



                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:paddingStart="36dp"
                    android:paddingEnd="36dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/shape_cancel_frequent_notif"
                    android:text="@string/days_cancel"
                    android:paddingHorizontal="22dp"
                    android:textColor="@color/black"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="8dp"
                    android:textSize="12sp" />



                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:paddingStart="36dp"
                    android:paddingEnd="36dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_save_days"
                    android:text="@string/days_save"
                    android:paddingHorizontal="22dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>