<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_gravity="center"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="36dp"
                app:srcCompat="@drawable/ic_caution_new" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_and_save"
                android:textColor="#333333"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"/>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/exit_prop"
                android:gravity="center_horizontal"
                android:textColor="#807F7F" />



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_cancel_save"
                    android:text="@string/sleep_cancel"
                    android:paddingHorizontal="22dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="#333333"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/btnExit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/shape_exit"
                    android:text="@string/btn_save_and_exit"
                    android:paddingHorizontal="22dp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="6dp"
                    android:textSize="11sp" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>